fixing shifted subnavs

--- a/public/stylesheets/identity.css
+++ b/public/stylesheets/identity.css
@@ -267,7 +267,7 @@ h3 {margin:1em 0 .5em;padding-bottom:.3em;border-bottom:1px solid #ccc;}
 
 
 
-ul#nav {float:left;margin:0 0 2em;padding:0;}
+ul#nav {float:left;margin:2em 0 2em;padding:0;}
 #nav li {float:left;list-style:none;margin:0 1em 0 0;padding:0 0 .5em;}
 form{clear:left;}
 .clear {clear:both;}
